[package]
name = "madxls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.19.0"
dashmap = "*"
log = "*"
log4rs = "*"
once_cell = "*"
clap = { version = "*", features = ["derive"] }
anyhow = "*"
